--- a/son/dom/chrome/dom/dom.properties
+++ b/son/dom/chrome/dom/dom.properties
@@ -156,6 +156,7 @@ XMLDocumentLoadPrincipalMismatch=Goyyan nda document.load ši koy nda takaddawey
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=IndexedDB sanbaray foo kaŋ mana hin ka toonandi jina n' ka kay moo naaruyan sabbu se.
 # LOCALIZATION NOTE: Do not translate Will-change, %1$S,%2$S are numbers.
+IgnoringWillChangeOverBudgetWarning=Will-change lakkal doo-zaayan ga hansa ka boobo. Dogoo ti takadda gande kaŋ ga taabu nda %1$S (sanda %2$S).  Ga will-change bangandirey kul kaŋ ga alkadaroo hoo muray.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker".
 HittingMaxWorkersPerDomain=ServiceWorker foo mana hin ka tun, zaa haa kaŋ se, goyey hinnaa kaŋ a ga hin k’i zaa, timme. Sohõda, ServiceWorker tunyanoo goo ma batu hala goyey kaŋ g’a boŋ hinnaa ma timme.
 # LOCALIZATION NOTE: Do no translate "setVelocity", "PannerNode", "AudioListener", "speedOfSound" and "dopplerFactor"
