--- a/son/browser/chrome/browser/browser.properties
+++ b/son/browser/chrome/browser/browser.properties
@@ -331,9 +331,15 @@ identity.identified.state_and_country=%S, %S
 
 identity.unknown.tooltip=Interneti nungoo woo ši boŋtammaasa alhabar noo.
 
+trackingProtection.intro.title=Takaa woo nda ganayan jejebu ga goy
 # LOCALIZATION NOTE (trackingProtection.intro.description): %S is brandShortName
+trackingProtection.intro.description=Waati kaŋ boro ga dii jejebu, woo ti Firefox ga soobay ka gundekuna kaŋ ga war gana gagay.
 # LOCALIZATION NOTE (trackingProtection.intro.step1of3): Indicates that the intro panel is step one of three in a tour.
+trackingProtection.intro.step1of3=1 hun 3
+trackingProtection.intro.nextButton.label=Jine
 
+trackingProtection.icon.activeTooltip=Na ganayan šiiyan gagay
+trackingProtection.icon.disabledTooltip=Na ganayan gundekuna maate
 
 # Edit Bookmark UI
 editBookmarkPanel.pageBookmarkedTitle=Moo šilbante
@@ -549,7 +555,10 @@ getUserMedia.shareCamera.message = War ga boona ka war biizaahayaa žemna nda %S
 getUserMedia.shareMicrophone.message = War ga boona ka war jindezaahayaa žemna nda %S?
 getUserMedia.shareScreen.message = War ga boona ka war biizaahayaa žemna nda %S?
 getUserMedia.shareCameraAndMicrophone.message = War ga boona ka war bii- nda jindezaahayey žemna nda %S?
+getUserMedia.shareCameraAndAudioCapture.message = War ga boona ka war biizaahayaa nda nor lokoo woo jindoo žemna nda %S?
 getUserMedia.shareScreenAndMicrophone.message = War ga boona ka war jindezaahayaa žemna nda %S?
+getUserMedia.shareScreenAndAudioCapture.message = War ga boona ka war nor loku jindoo and war dijoo žemna nda %S?
+getUserMedia.shareAudioCapture.message = War ga boona ka war nor loku jindoo woo žemna nda %S?
 getUserMedia.selectWindow.label=Zanfun ka žemna:
 getUserMedia.selectWindow.accesskey=Z
 getUserMedia.selectScreen.label=Diji ka žemna:
@@ -565,6 +574,7 @@ getUserMedia.shareEntireScreen.label = Diji timmante
 # LOCALIZATION NOTE (getUserMedia.shareMonitor.label):
 # %S is screen number (digits 1, 2, etc)
 # Example: Screen 1, Screen 2,..
+getUserMedia.shareMonitor.label = Diji %S
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -594,6 +604,7 @@ getUserMedia.sharingApplication.message = War goo ma porogaram-ize foo žemni nd
 getUserMedia.sharingScreen.message = War goo ma war dijoo žemni nda moɲoo woo.
 getUserMedia.sharingWindow.message = War goo ma war diji foo žemni nda moɲoo woo.
 getUserMedia.sharingBrowser.message = War goo ma war nor loku foo žemni nda moɲoo woo.
+getUserMedia.sharingAudioCapture.message = War goo ma war nor loku jindoo žemna sohõ nda moɲoo woo.
 getUserMedia.continueSharing.label = Gaabu ka žemna
 getUserMedia.continueSharing.accesskey = G
 getUserMedia.stopSharing.label = Fenda žemnayan
@@ -633,6 +644,7 @@ getUserMedia.sharingMenu.accesskey = j
 # %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.sharingMenuCamera = %S (biizaahaya)
 getUserMedia.sharingMenuMicrophone = %S (mikro)
+getUserMedia.sharingMenuAudioCapture = %S (nor loku jinde)
 getUserMedia.sharingMenuApplication = %S (porogaram)
 getUserMedia.sharingMenuScreen = %S (diji)
 getUserMedia.sharingMenuWindow = %S (zanfun)
@@ -642,6 +654,11 @@ getUserMedia.sharingMenuCameraMicrophoneApplication = %S biizaahaya,mikro nda po
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S biizaahaya, mikro nda diji)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (biizaahaya, mikro nda zanfun)
 getUserMedia.sharingMenuCameraMicrophoneBrowser = %S (biizaahaya, mikro nda nor loku)
+getUserMedia.sharingMenuCameraAudioCapture = %S (biizaahaya nda nor loku jinde)
+getUserMedia.sharingMenuCameraAudioCaptureApplication = %S (biizaahaya, nor loku jinde nda porogaram)
+getUserMedia.sharingMenuCameraAudioCaptureScreen = %S (biizaahaya, nor loku jinde nda diji)
+getUserMedia.sharingMenuCameraAudioCaptureWindow = %S (biizaahaya, nor loku jinde nda zanfun)
+getUserMedia.sharingMenuCameraAudioCaptureBrowser = %S (biizaahaya, nor loku jinde nda nor loku)
 getUserMedia.sharingMenuCameraApplication = %S (biizaahaya nda porogaram)
 getUserMedia.sharingMenuCameraScreen = %S (biizaahaya nda diji)
 getUserMedia.sharingMenuCameraWindow = %S (biizaahaya nda zanfun)
@@ -650,6 +667,10 @@ getUserMedia.sharingMenuMicrophoneApplication = %S (mikro nda porogaram)
 getUserMedia.sharingMenuMicrophoneScreen = %S (mikro nda diji)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikro nda zanfun)
 getUserMedia.sharingMenuMicrophoneBrowser = %S (mikro nda nor loku)
+getUserMedia.sharingMenuAudioCaptureApplication = %S (nor loku jinde nda porogaram)
+getUserMedia.sharingMenuAudioCaptureScreen = %S (nor loku jinde nda diji)
+getUserMedia.sharingMenuAudioCaptureWindow = %S (nor loku jinde nda zanfun)
+getUserMedia.sharingMenuAudioCaptureBrowser = %S (nor loku jinde nda nor loku)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
 getUserMedia.sharingMenuUnknownHost = Aššil šibayante
@@ -755,3 +776,7 @@ e10s.accessibilityNotice.disableAndRestart.accesskey = t
 e10s.accessibilityNotice.dontDisable.label = Ma ši a kayandi
 e10s.accessibilityNotice.dontDisable.accesskey = i
 
+muteTab.label = Nor loku jinde wii
+muteTab.accesskey = j
+unmuteTab.label = Nor jinde feeri
+unmuteTab.accesskey = i
