--- a/son/dom/chrome/layout/HtmlForm.properties
+++ b/son/dom/chrome/layout/HtmlForm.properties
@@ -5,6 +5,8 @@
 Reset=Yeeti
 Submit=Hãayan sanba
 Browse=Naaru…
+ChooseFiles=Tukey suuba…
+ChooseDirs=Foolo suuba…
 FileUpload=Tuku zijandi
 # LOCALIZATION NOTE (IsIndexPromptWithSpace): The last character of the string 
 # should be a space (U+0020) in most locales. The prompt is followed by an 
