--- a/son/services/sync/sync.properties
+++ b/son/services/sync/sync.properties
@@ -10,6 +10,7 @@ lastSync2.label = Hangandiyan koraa: %S
 
 # signInToSync.description is the tooltip for the Sync buttons when Sync is
 # not configured.
+signInToSync.description = Huru Sync ra
 
 mobile.label = Doo-šilbay dirantey
 
