--- a/son/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/son/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -24,6 +24,7 @@ dateUpdated=Na %S taagandi
 #LOCALIZATION NOTE (notification.incompatible) %1$S is the add-on name, %2$S is brand name, %3$S is application version
 notification.incompatible=%1$S nda %2$S %3$S ši cere kanbe.
 #LOCALIZATION NOTE (notification.unsigned, notification.unsignedAndDisabled) %1$S is the add-on name, %2$S is brand name
+notification.unsignedAndDisabled=%1$S mana hin ka korosandi ka goy nda %2$S nda an' ka kayandi.
 #LOCALIZATION NOTE (notification.blocked) %1$S is the add-on name
 notification.blocked=%1$S kayandi saajaw wala tabatiyan-jaŋay sabbu še.
 notification.blocked.link=Alhabar tontoni
