--- a/son/toolkit/chrome/global/aboutWebrtc.properties
+++ b/son/toolkit/chrome/global/aboutWebrtc.properties
@@ -22,57 +22,83 @@ debug_mode_off_state_msg = ceebandu tammaasa ga duwandi ne: %1$S
 
 # LOCALIZATION NOTE (debug_mode_on_state_msg):
 # %1$S will be replaced by the full path file name of the debug log.
+debug_mode_on_state_msg = hasaraw-kaayan ga dira, ceebandu tammaasa doo: %1$S
 
 # LOCALIZATION NOTE (aec_logging_msg_label, aec_logging_off_state_label,
 # aec_logging_on_state_label, aec_logging_on_state_msg):
 # AEC is an abbreviation for Acoustic Echo Cancellation.
+aec_logging_msg_label = AEC zaaritiira
+aec_logging_off_state_label = AEC zaaritiira šintin
+aec_logging_on_state_label = AEC zaatiira kayandi
+aec_logging_on_state_msg = AEC zaaritiira ga dira (šelaŋ nda ciyakaw miniti fooyaŋ nda jindezaayanoo kayandi)
 
 # LOCALIZATION NOTE (aec_logging_off_state_msg):
 # %1$S will be replaced by the full path to the directory containing the captured log files.
 # AEC is an abbreviation for Acoustic Echo Cancellation.
+aec_logging_off_state_msg = zaaritiira tuku zaantey ga duwandi ne: %1$S
 
 # LOCALIZATION NOTE (peer_connection_id_label): "PeerConnection" is a proper noun
 # associated with the WebRTC module. "ID" is an abbreviation for Identifier. This string
 # should not normally be translated and is used as a data label.
+peer_connection_id_label = PeerConnection tammaasa
 
 # LOCALIZATION NOTE (sdp_heading, local_sdp_heading, remote_sdp_heading):
 # "SDP" is an abbreviation for Session Description Protocol, an IETF standard.
 # See http://wikipedia.org/wiki/Session_Description_Protocol
+sdp_heading = SDP
+local_sdp_heading = Gorodoo SDP
+remote_sdp_heading = SDP moora
 
 # LOCALIZATION NOTE (rtp_stats_heading): "RTP" is an abbreviation for the
 # Real-time Transport Protocol, an IETF specification, and should not
 # normally be translated. "Stats" is an abbreviation for Statistics.
+rtp_stats_heading = RTP hinawey
 
 # LOCALIZATION NOTE (ice_state, ice_stats_heading): "ICE" is an abbreviation
 # for Interactive Connectivity Establishment, which is an IETF protocol,
 # and should not normally be translated. "Stats" is an abbreviation for
 # Statistics.
+ice_state = ICE alhaali
+ice_stats_heading = ICE hinawey
 
 # LOCALIZATION NOTE (av_sync_label): "A/V" stands for Audio/Video.
 # "sync" is an abbreviation for sychronization. This is used as
 # a data label.
+av_sync_label = Jinde nda widewo hangandiyan
 
 # LOCALIZATION NOTE (jitter_buffer_delay_label): A jitter buffer is an
 # element in the processing chain, see http://wikipedia.org/wiki/Jitter
 # This is used as a data label.
+jitter_buffer_delay_label = Jijiriyan batu tammaasa
 
 # LOCALIZATION NOTE (avg_bitrate_label, avg_framerate_label): "Avg." is an abbreviation
 # for Average. These are used as data labels.
+avg_bitrate_label = Fondohinka fattayan sawante
+avg_framerate_label = Segondu ra bii hinna sawante
 
 # LOCALIZATION NOTE (local, remote): These adjectives are used to label a
 # line of statistics collected for a peer connection. The data represents
 # either the local or remote end of the connection.
+local = gorodoo
 remote = moora
 
 # LOCALIZATION NOTE (nominated): This adjective is used to label a table column.
 # Cells in this column contain the localized javascript string representation of "true"
 # or are left blank.
+nominated = Maa harante
 
 # LOCALIZATION NOTE (selected): This adjective is used to label a table column.
 # Cells in this column contain the localized javascript string representation of "true"
 # or are left blank. This represents an attribute of an ICE candidate.
+selected = Suubante
 
 save_page_label = Moɲoo gaabu
+debug_mode_msg_label = Hasaraw-kaayan alhaali
+debug_mode_off_state_label = Hasaraw-kaayan alhaali tunandi
+debug_mode_on_state_label = Hasaraw-kaayan alhaali kayandi
+log_heading = Ciyari zaaritiira
+log_show_msg = zaaritiira cebe
+log_hide_msg = zaaritiira tugu
 connection_closed = daabante
 received_label = Duwante\u0020
 sent_label = Sanbante
