--- a/son/dom/chrome/accessibility/AccessFu.properties
+++ b/son/dom/chrome/accessibility/AccessFu.properties
@@ -32,6 +32,7 @@ outlineitem    =       filla-boŋ hayiize
 pagetab        =       nor loku
 propertypage   =       mayray moo
 graphic        =       bii takari
+switch         =       bere
 pushbutton     =       butoŋ
 checkbutton    =       maasa butoŋ
 radiobutton    =       arajo butoŋ
@@ -74,10 +75,20 @@ definitionlist =       bayrandiyan maašeede
 term           =       kalima
 definition     =       bayrandiyan
 
+mathmltable              = kabu daari
+mathmlcell               = kali-ize
+mathmlenclosed           = daabante
+mathmlfraction           = ferši
+mathmlfractionwithoutbar = ferši bila nda zuu
+mathmlroot               = linji
+mathmlscripted           = šigirante
+mathmlsquareroot         = kaare linji
 
 # More sophisticated roles which are not actual numeric roles
 textarea       =       kalimaɲaa kuru ganda
 
+base           =       cire
+close-fence    =       kali daabuyan
 
 # Text input types
 textInputType_date   =       han
