--- a/gd/browser/chrome/browser/loop/loop.properties
+++ b/gd/browser/chrome/browser/loop/loop.properties
@@ -215,6 +215,7 @@ video_call_menu_button=Còmhradh video
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
 gravatars_promo_message='S urrainn dhut ìomhaigheagan phròifilean a chur ris an luchd-aithne agad gu fèin-obrachail 's tu a' nochdadh an cuid phost-d dha Gravatar. {{learn_more}}.
 gravatars_promo_message_learnmore=Barrachd fiosrachaidh
+gravatars_promo_button_nothanks2=Cha chuir, gun robh math agaibh
 gravatars_promo_button_use2=Cleachd ìomhaigheagan phròifilean
 
 # Conversation Window Strings
