--- a/az/browser/chrome/browser/loop/loop.properties
+++ b/az/browser/chrome/browser/loop/loop.properties
@@ -28,8 +28,18 @@ sign_in_again_use_as_guest_button2={{clientSuperShortname}} səyyahını Qonaq k
 first_time_experience_button_label=Başla
 ## LOCALIZATION_NOTE(first_time_experience_subheading): Message inviting the
 ## user to create his or her first conversation.
+first_time_experience_subheading=Söhbətə qoşul
 
 invite_header_text=Sizə qoşulması üçün başqasını dəvət edin.
+invite_header_text2=Yoldaşınızı sizə qoşulmağa dəvət edin
+invite_facebook_button=Facebook-da paylaş
+invite_facebook_triggered=paylaşıldı!
+invite_contacts_button=əlaqələrlə paylaş
+invite_contacts_triggered=paylaşıldı!
+invite_copy_button=keçidi köçür
+invite_copy_triggered=köçürüldü!
+invite_email_button=keçidi e-poçtla göndər
+invite_email_triggered=e-poçtla göndərildi!
 
 # Status text
 display_name_guest=Qonaq
@@ -54,11 +64,15 @@ problem_accessing_account=Hesabınıza daxil olarkən problem yaşandı
 ## the appropriate action.
 retry_button=Təkrar yoxla
 
+share_email_subject6=Mənimlə görüntülü söhbətə qoşul
 ## LOCALIZATION NOTE (share_email_body6): In this item, don't translate the
 ## part between {{..}} and leave the \n\n part alone
+share_email_body6=Söhbətə indi qoşulmaq üçün Firefox Hello keçidinə klikləyin: {{callUrl}}
 ## LOCALIZATION NOTE (share_email_body_context2): In this item, don't translate
 ## the part between {{..}} and leave the \n\n part alone.
+share_email_body_context2=Mənimlə video söhbətə qoşul. Qoşulmaq üçün Firefox Hello keçidinə klikləyin:{{callUrl}}\n\nSöhbətimizdə bunu müzakirə edək: {{title}}
 ## LOCALIZATION NOTE (share_email_footer): Common footer content for both email types
+share_email_footer=\n\n________\nFirefox Hello ilə pulsuz video söhbət başladın və qoşulun. Hər yerdə, hər kəslə asan şəkildə video söhbət edin. Endirmək ya da qeydiyyat tələb etmir. Daha ətraflı http://www.firefox.com/hello ünvanında
 ## LOCALIZATION NOTE (share_tweeet): In this item, don't translate the part
 ## between {{..}}. Please keep the text below 117 characters to make sure it fits
 ## in a tweet.
@@ -85,9 +99,12 @@ contacts_search_placesholder2=Axtar…
 
 ## LOCALIZATION NOTE (new_contact_button2): This is the button to open the
 ## new contact sub-panel.
+new_contact_button2=Yeni əlaqə əlavə et
 ## LOCALIZATION NOTE (contact_form_*_placeholder):
 ## These are the placeholders for the inputs for entering or editing a contact
 ## Click the 'New Contact' button to see the fields.
+contact_form_name_placeholder=Ad
+contact_form_email_placeholder=E-poçt
 contact_form_fxos_phone_placeholder=Firefox OS Telefonu
 contact_form_phone_placeholder2=Telefon
 
@@ -96,8 +113,10 @@ contacts_blocked_contacts=Bloklanmış əlaqələr
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact. Click the 'New Contact'
 ## button to see the fields.
+add_contact_button=Əlaqə əlavə et
 ## LOCALIZATION NOTE(add_contact_title): This is the subtitle of the add contact
 ## panel. It is displayed when Add Contact is selected.
+add_contact_title=Əlaqə əlavə et
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
@@ -123,14 +142,19 @@ import_contacts_success_message={{total}} əlaqə uğurla idxal edildi.;{{total}
 sync_contacts_button=Əlaqələri sinxronlaşdır
 ## LOCALIZATION NOTE(no_contacts_message_heading2): Title shown when user has no
 ## contacts in his address book
+no_contacts_message_heading2=Hələlik əlaqə yoxdur.
 ## LOCALIZATION NOTE(no_contacts_import_or_add2): Subheading inviting the user
 ## to add people to his contact list
+no_contacts_import_or_add2=Birini əlavə et!
 ## LOCALIZATION NOTE(no_conversations_message_heading2): Title shown when user
 ## has no conversations available.
+no_conversations_message_heading2=Hələlik söhbət yoxdur.
 ## LOCALIZATION NOTE(no_conversations_start_message2): Subheading inviting the
 ## user to start a new conversation.
+no_conversations_start_message2=Yenisini başlat!
 ## LOCALIZATION NOTE(contacts_no_search_results): Message shown when contacts
 ## search returned no matching results.
+contacts_no_search_results=Uyğun nəticə tapılmadı.
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -143,14 +167,17 @@ import_failed_support_button=Kömək
 remove_contact_menu_button2=Əlaqəni Sil…
 ## LOCALIZATION NOTE(remove_contact_title): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
+remove_contact_menu_button3=Əlaqəni Sil
 ## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
 ## to confirm deletion of a contact.
 confirm_delete_contact_alert=Bu əlaqəni silmək istədiyinizə əminsiniz?
 ## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
 ## These are displayed on the alert with confirm_delete_contact_alert
+confirm_delete_contact_remove_button=Əlaqəni Sil
 confirm_delete_contact_cancel_button=Ləğv et
 ## LOCALIZATION NOTE(contact_list_title): This is in uppercase in English for
 ## emphasis, please do what is appropriate for specific locales.
+contact_list_title=ƏLAQƏLƏRİM
 
 ## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to block a contact from calling
@@ -174,6 +201,7 @@ edit_contact_email_label=E-poçt
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
+edit_contact_done_button=Bitdi
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
@@ -187,6 +215,8 @@ video_call_menu_button=Video söhbət
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
 gravatars_promo_message=Əlaqələrinizin Gravatar e-poçt ünvanlarını paylaşmaqla onlara avtomatik olaraq profil təsvirlərini əlavə edə bilərsiz. {{learn_more}}.
 gravatars_promo_message_learnmore=Ətraflı öyrən
+gravatars_promo_button_nothanks2=Xeyr, təşəkkürlər
+gravatars_promo_button_use2=Profil ikonlarını işlət
 
 # Conversation Window Strings
 
@@ -202,10 +232,13 @@ hangup_button_title=Qapat
 hangup_button_caption2=Çıxış
 mute_local_audio_button_title=Səsi kəs
 unmute_local_audio_button_title=Səsi aç
+mute_local_video_button_title2=Videonu söndür
+unmute_local_video_button_title2=Videonu aç
 active_screenshare_button_title=Paylaşmanı dayandır
 inactive_screenshare_button_title=Ekranını paylaş
 share_tabs_button_title2=Vərəqlərinizi Paylaşın
 share_windows_button_title=Başqa pəncərələri paylaş
+self_view_hidden_message=Öz görünüşünüz gizlidir amma hələ də göndərilir. Görmək üçün pəncərinin ölçüsünü dəyişdirin
 
 
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
@@ -238,6 +271,7 @@ restart_call=Yenidən qoşul
 contact_unavailable_title={{contactName}} məşğuldur.
 generic_contact_unavailable_title=Bu şəxs məşğuldur.
 
+generic_failure_message=Texniki çətinliklərimiz var…
 generic_failure_with_reason2=Yenidən yoxlaya bilər və ya daha sonra əlaqə saxlamaq üçün e-poçt ilə link göndərə bilərsiniz.
 generic_failure_no_reason2=Yenidən yoxlamaq istəyirsiniz?
 
@@ -253,6 +287,7 @@ call_timeout_notification_text=Zənginiz qarşı tərəfə çatmadı.
 retry_call_button=Yenidən yoxla
 email_link_button=Keçidi e-poçtla göndər
 cancel_button=Ləğv et
+rejoin_button=Söhbətən yenidən qoşul
 
 cannot_start_call_session_not_ready=Zəng etmək mümkün olmur, seans hazır deyil.
 network_disconnected=Şəbəkə bağlantısı gözlənilmədən kəsildi.
@@ -292,6 +327,7 @@ rooms_leave_button_label=Tərk et
 rooms_list_copy_url_tooltip=Keçidi köçür
 ## LOCALIZATION NOTE (rooms_list_recent_conversations): String is in all caps
 ## for emphasis reasons, it is a heading. Proceed as appropriate for locale.
+rooms_list_recent_conversations=SON SÖHBƏTLƏR
 rooms_list_delete_tooltip=Söhbəti sil
 rooms_list_deleteConfirmation_label=Əminsiniz?
 rooms_change_failed_label=Söhbət yenilənə bilməz
@@ -301,6 +337,7 @@ rooms_room_full_label=Bu söhbətdə artıq iki nəfər var.
 rooms_room_full_call_to_action_nonFx_label=Öz söhbətinizi başladmaq üçün {{brandShortname}} səyyahını endirin
 rooms_room_full_call_to_action_label={{clientShortname}} haqqında məlumat alın »
 rooms_room_joined_label=Kimsə söhbətə qoşuldu!
+rooms_room_join_label=Söhbətə qoşul
 rooms_signout_alert=Açıq söhbətlər qapatılacaq
 
 # Infobar strings
@@ -316,11 +353,13 @@ infobar_menuitem_dontshowagain_accesskey=D
 # LOCALIZATION NOTE (context_inroom_header): this string is displayed in the
 # conversation window when the user edits context. It is a header to the edit
 # section.
+context_inroom_header=Söhbət mövzusu…
 # LOCALIZATION NOTE (context_inroom_label2): this string is followed by the
 # title and domain of the website you are having a conversation about, displayed on a
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
+context_inroom_label2=Söhbət mövzusu:
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
@@ -329,6 +368,8 @@ context_edit_name_placeholder=Söhbət Adı
 context_edit_comments_placeholder=Şərhlər
 context_add_some_label=Kontekst əlavə et
 context_show_tooltip=Konteksti Göstər
+context_cancel_label=Ləğv et
+context_done_label=Bitdi
 context_link_modified=Bu keçid dəyişdirilib.
 context_learn_more_link_label=Ətraflı öyrən.
 conversation_settings_menu_edit_context=Konteksti Dəyişdir
