--- a/son/browser/chrome/browser/devtools/markers.properties
+++ b/son/browser/chrome/browser/devtools/markers.properties
@@ -95,7 +95,7 @@ marker.gcreason.label.OUT_OF_NURSERY=Kaloo too
 marker.gcreason.label.EVICT_NURSERY=Kali furyanoo
 marker.gcreason.label.FULL_STORE_BUFFER=Kali haya-izey ga hansa ka dira
 marker.gcreason.label.SHARED_MEMORY_LIMIT=Fersari beero kaŋ
-marker.gcreason.label.PERIODIC_FULL_GC=Zaman žiibi margakaw too
+marker.gcreason.label.PERIODIC_FULL_GC=Waati cindi-kurmakaw too
 marker.gcreason.label.INCREMENTAL_TOO_SLOW=Fersari dimma ka hansa ka cahã
 marker.gcreason.label.COMPONENT_UTILS=Cu.forceGC
 marker.gcreason.label.MEM_PRESSURE=Lakkal yalaafante
@@ -108,6 +108,14 @@ marker.gcreason.label.SET_NEW_DOCUMENT=Takadda taaga
 marker.gcreason.label.SET_DOC_SHELL=Takadda taaga
 marker.gcreason.label.DOM_UTILS=API ciyari
 marker.gcreason.label.DOM_IPC=IPC
+marker.gcreason.label.DOM_WORKER=Zaman cindi-kurmakaw
+marker.gcreason.label.INTER_SLICE_GC=Waati tontoni cindi-kurmakaw šeela
+marker.gcreason.label.FULL_GC_TIMER=Waati cindi-kurmakaw too
+marker.gcreason.label.SHUTDOWN_CC=Wii
+marker.gcreason.label.FINISH_LARGE_EVALUATE=Zimamyan beeri
+marker.gcreason.label.DOM_WINDOW_UTILS=Goykaw kayante
+marker.gcreason.label.USER_INACTIVE=Goykaw kayante
 
 # LOCALIZATION NOTE (marker.gcreason.description.*):
 # These strings are used to give an expanded description of why a GC occurred.
+marker.gcreason.description.API=API ciyari cindi kaŋ na žiibi kurmayan waažibandi.
