--- a/mai/browser/chrome/browser/migration/migration.properties
+++ b/mai/browser/chrome/browser/migration/migration.properties
@@ -6,9 +6,13 @@ profileName_format=%S %S
 
 # Browser Specific
 sourceNameIE=इंटरनेट एकक्सप्लोरर
+sourceNameEdge=माइक्रोसोफ्ट किनार
 sourceNameSafari=सफारी
+sourceNameCanary=गूगल क्रोम कैनेरी
 sourceNameChrome=गूगल क्रोम
+sourceNameChromium=क्रोमियम
 sourceNameFirefox=मोजिल्ला फायरफाक्स
+sourceName360se=360 सुरक्षित ब्राउज़र
 
 importedBookmarksFolder=%S सँ
 
@@ -21,27 +25,38 @@ importedSafariReadingList=पठन सूची (सफारीसँ)
 1_edge=सेटिंग्स
 1_safari=वरीयता
 1_chrome=वरीयताएँ
+1_360se=वरीयता
 
 2_ie=कुकीज
+2_edge=कुकीज
 2_safari=कूक़ीज
 2_chrome=कुकीज
 2_firefox=कुकीज
+2_360se=कुकीज
 
 4_ie=ब्राउजिंग इतिहास
+4_edge=ब्राउजिंग इतिहास
 4_safari=ब्राउजिंग इतिहास
 4_chrome=ब्राउजिंग इतिहास
 4_firefox_history_and_bookmarks=ब्राउजिंग इतिहास आओर पुस्तकचिह्न
+4_360se=ब्राउजिंग इतिहास
 
 8_ie=इतिहास सँ सहेजल
+8_edge=इतिहास सँ सहेजल
 8_safari=इतिहास सँ सहेजल
 8_chrome=इतिहास सँ सहेजल गेल
 8_firefox=इतिहास सँ सहेजल गेल
+8_360se=इतिहास सँ सहेजल
 
 16_ie=सहेजल गुड़किल्ली
+16_edge=सहेजल गुड़किल्ली
 16_safari=सहेजल गुड़किल्ली
 16_chrome=सहेजल गुड़किल्ली
 16_firefox=सहेजल गुड़किल्ली
+16_360se=सहेजल गुड़किल्ली
 
+32_ie=पसंदीदा
+32_edge=पसंदीदा
 32_safari=पुस्तकचिह्न
 32_chrome=पुस्तकचिह्न
 
